# ToolAssistedProgramming

./: .gitignore  README.md
ToolAssistedProgramming/: CMakeLists.txt
ToolAssistedProgramming/ToolAssistedProgramming/: CMakeLists.txt  DataParser.cpp  DataParser.hpp  DataWriter.cpp  DataWriter.hpp  EntryPoint.cpp  EntryPoint.h  EntryPoint.hpp  FileManager.cpp  FileManager.hpp  Foundation.hpp
